TODO
* Add MongeauSankoffAligner (other name?)
* Add GeneralGlobalAligner
* Add GeneralLocalAligner
* Add AffineLocalAligner
* Add test suite

Release 0.11.0 - xx
* Moved the resulting alignment from the AlignmentAlgorithm to the Sequences object.
* Refactoring
  NeedlemanWunsch -> LinearGlobalAligner
  NeedlemanWunschGotoh -> AffineGlobalAligner
  SmithWaterman -> LinearLocalAligner
  SmithWatermanGotoh -> AffineLocalAligner
  Reason: the implementations differ (slightly) from the algorithms in the literature.

Release 0.10.0 - 21 November 2011
* Now NeedlemanWunschGotoh uses the AffineGapRater.
* Added gnuplot output to AlignmentVisualizer
* Removed AlignmentAlgorithm::setGapRater()
  Removed AlignmentAlgorithm::setSimilarityRater()
  Raters now must be set through the constructor of the Algorithm class
  This is to ensure that the algorithm gets the right raters.
* Added class AffineGapRater. To be used with NeedlemanWunschGotoh / Affine local alignment.

Release 0.9.2 - 13 October 2011
* Update CMakeLists.txt

Release 0.9.1 - 13 October 2011
* Fixed bugs in SmithWaterman

Release 0.9 - 5 October 2011
* Added install scripts
* Added alignmidi
* Added Reader class
* Sparce histogram in nlb
* Many data members are now private
* Fixed several minor bugs

Release 0.8.1 - 3 August 2011
* Added build system: cmake

Release 0.8 - 8 July 2011
* First public release

Previous to 0.8
* Internal releases.